Fix mobile nav menu styles in web-components (#373)
- the close icon should be on the left, not right
- also remove extra margin for titles that aren't separated by a divider, this no-separator option was added for funder portal but style wasn't adjusted
- does not affect the terraware use-case

--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -37,6 +37,10 @@
       color: $tw-clr-txt;
       display: block;
       margin-top: $tw-spc-base-small;
+
+      &.no-separator {
+        margin-top: 0;
+      }
     }
   }
 
